spark.jar back in game